--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: false
 
-  datasource:
-    #    username: sa
-    #    password: P@ss@12345
-    #    url: jdbc:sqlserver://10.1.12.110:1433;instanceName=EBSQLSRV;databaseName=EWBFS
+  datasource: 
     username: root
     password:
     url: jdbc:mysql://localhost:3306/EWBFS
@@ -27,18 +24,18 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://10.1.22.72:8081/auth/realms/enat
-#          issuer-uri: http://10.1.12.70:8081/auth/realms/enat
+          issuer-uri: http://localhost
+#          issuer-uri: http://localhost
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://10.1.22.72:8761/eureka}
+      defaultZone: ${localhost}
   instance:
     preferIpAddress: true
 
 services:
-  hr: 'http://10.1.22.72:8083/hr'
+  hr: 'http://localhostr'
 springdoc:
   api-docs:
     enabled: true
